--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,8 +2,8 @@
 // colors
 :root {
   // base
-  --font-family: "Open Sans", sans-serif;
-  --content-width: 1170px;
+  --font-family: "Roboto", sans-serif;
+  --content-width: 1397px;
   --container-offset: 15px;
   --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
 
