--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,5 +10,7 @@
 @import "./components/border-block";
 @import "./components/nav-list";
 @import "./components/logo";
+@import "./components/hero";
+@import "./components/ticker";
 
 
