--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,5 +12,7 @@
 @import "./components/logo";
 @import "./components/hero";
 @import "./components/ticker";
+@import "./components/products";
+@import "./components/card";
 
 
