--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,5 +15,6 @@
 @import "./components/products";
 @import "./components/card";
 @import "./components/story";
+@import "./components/ticker-bottom";
 
 
