--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,5 +16,6 @@
 @import "./components/card";
 @import "./components/story";
 @import "./components/ticker-bottom";
+@import "./components/banner";
 
 
