--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,5 +17,6 @@
 @import "./components/story";
 @import "./components/ticker-bottom";
 @import "./components/banner";
+@import "./components/footer";
 
 
