--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -8,6 +8,11 @@ html {
   box-sizing: inherit;
 }
 
+html,
+body {
+  min-width: 375px;
+}
+
 .page {
   height: 100%;
   font-family: var(--font-family, sans-serif);
@@ -26,6 +31,13 @@ a {
 
 .site-container {
   overflow: hidden; // если используете на сайте position: sticky - уберите эту настройку
+  @include big-desktop {
+    min-width: 1430px;
+  }
+
+  @include tablet {
+    min-width: auto;
+  }
 }
 
 .is-hidden {
@@ -101,4 +113,10 @@ a {
 
 .flex {
   display: flex;
+
+  @include tablet {
+    flex-direction: column;
+    align-items: center;
+  }
 }
+
