--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -4,5 +4,13 @@
         display: block;
         margin-top: -180px;
         width: 100%;
+
+        @include tablet{
+            margin-top: -120px;
+        }
+
+        @include mobile {
+            margin-top: -45px;
+        }
     }
 }
