--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -6,7 +6,15 @@
         margin-top: -1px;
         padding: 20px 93px;
         background-color:#CDFD3B;
+
+        @include mobile {
+            flex-direction: column;
+            gap: 10px;
+            padding: 20px;
+        }
     }
+
+
 
     &__text {
         font-weight: 400;
@@ -16,5 +24,5 @@
         letter-spacing: 0.5px;
         text-transform: uppercase;
         color: var(--dark-color);
-            }
+    }
 }
