--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -7,8 +7,10 @@
         align-items: center;
         justify-content: space-between;
         padding: 22px;
+
+        @include tablet {
+            flex-direction: column;
+        }
     }
-
-
 }
 
