--- a/src/scss/components/_products.scss
+++ b/src/scss/components/_products.scss
@@ -15,6 +15,11 @@
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
+
+            @include mobile {
+                width: 100px;
+                height: 70px;
+            }
         }
 
         &::after{
@@ -26,6 +31,11 @@
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
+
+            @include mobile {
+                width: 100px;
+                height: 70px;
+            }
         }
     }
 
@@ -39,6 +49,16 @@
         letter-spacing: 0.5px;
         text-transform: uppercase;
         color: var(--dark-color);
+
+        @include tablet {
+            padding: 20px 0;
+        }
+
+        @include mobile {
+            padding: 20px;
+            font-size: 45;
+            line-height: 50px;
+        }
     }
 
     &__content {
@@ -68,6 +88,20 @@
                 transform: translateX(-15px);
             }
         }
+
+        @include tablet {
+            display: none;
+        }
+    }
+
+    &__item {
+        @include tablet {
+            width: calc(50% - 13px);
+        }
+
+        @include mobile {
+            width: 100%;
+        }
     }
 
     &__list {
@@ -76,6 +110,7 @@
         padding: 0 20px;
         padding-bottom: 20px;
         gap: 26px;
+
     }
 
     &__cover {
