--- a/src/scss/components/_story.scss
+++ b/src/scss/components/_story.scss
@@ -6,14 +6,22 @@
     &__left{
         display: flex;
         flex-direction: column;
-
         border-right: 1px solid var(--dark-color);
         width: 50%;
 
+        @include tablet {
+            border: none;
+            width: 100%;
+        }
     }
 
     &__right{
+
         width: 50%;
+
+        @include tablet {
+            width: 100%;
+        }
     }
 
     &__title {
@@ -26,6 +34,12 @@
         letter-spacing: 0.5px;
         text-transform: uppercase;
         color: var(--dark-color);
+
+        @include mobile {
+            padding: 20px;
+            font-size: 45;
+            line-height: 50px;
+        }
     }
 
     &__image {
@@ -40,6 +54,10 @@
         background-size: cover;
         background-repeat: no-repeat;
         aspect-ratio: 1 / 1;
+
+        @include tablet {
+            padding: 170px 0;
+        }
     }
 
     &__text {
@@ -56,6 +74,11 @@
 
         &:not(:last-child) {
             margin-bottom: 24px;
+        }
+        @include mobile {
+            padding: 0 15px;
+            font-size: 14px;
+            line-height: 25px;
         }
     }
 }
